[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/touch buttons/Backward_button.png" type="Texture" id=1]
[ext_resource path="res://assets/touch buttons/Right_button.png" type="Texture" id=2]
[ext_resource path="res://assets/touch buttons/Forward_button.png" type="Texture" id=3]
[ext_resource path="res://assets/touch buttons/Left_button.png" type="Texture" id=4]
[ext_resource path="res://TouchControl.gd" type="Script" id=5]
[ext_resource path="res://assets/touch buttons/Jump_button.png" type="Texture" id=6]

[node name="Controller" type="Node2D"]
position = Vector2( 24, 152 )
z_index = 1
script = ExtResource( 5 )

[node name="Up" type="TouchScreenButton" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.16, 0.16 )
normal = ExtResource( 3 )
visibility_mode = 1

[node name="Down" type="TouchScreenButton" parent="."]
position = Vector2( 0, -9.53674e-07 )
scale = Vector2( 0.16, 0.16 )
normal = ExtResource( 1 )
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( -16, 0 )
scale = Vector2( 0.16, 0.16 )
normal = ExtResource( 4 )
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 16, 1.90735e-06 )
scale = Vector2( 0.16, 0.16 )
normal = ExtResource( 2 )
visibility_mode = 1

[node name="Button" type="TouchScreenButton" parent="."]
position = Vector2( 192, 0 )
scale = Vector2( 0.16, 0.16 )
normal = ExtResource( 6 )
visibility_mode = 1
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="released" from="Up" to="." method="_on_Up_released"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
[connection signal="released" from="Down" to="." method="_on_Down_released"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="released" from="Button" to="." method="_on_Button_released"]
